--- a/计算机基础.md
+++ b/计算机基础.md
@@ -1,3 +1,7 @@
 熟悉常见的数据结构和算法，如递归，贪心，回溯，动态规划
 
-熟悉计算机网络，如网络的分层
+熟悉计算机网络，如网络的分层，TCP/IP网络模型，熟悉HTTP,HTTPS,TCP,UDP等计算机网络的常见协议
+
+
+熟悉操作系统，对进程，内存管理，I/O多路服用，CPU调度和死锁等操作系统的基础知识
+
