--- a/并发编程.md
+++ b/并发编程.md
@@ -1,1 +1,5 @@
 并发编程：熟练使用Java中的并发容器，
+
+并发编程:熟练掌握Java并发编程，包括对ConcurrentHashMap和CopyOnWriteArrayList等高级并发容器的深度使用。深入理解线程
+池、synchronized、CAS、AQS、volatile以及MESI缓存一致性协议,了解并应用复杂的并发模式，如两阶段终止模式，以确保资源的优
+雅释放和线程的安全协调。
