--- a/工具.md
+++ b/工具.md
@@ -1,1 +1,8 @@
 工具:了解Linux常用命令，熟练使用IDEA、Maven、Git和Swagger等开发和测试工具，熟练使用AI工具辅助开发。
+
+熟练使用IDEA、Navicat、Postman、
+Git、Maven 等开发工具;熟悉 Linux 下的常用操作命令，能够独立完成环境搭建和系统部署。
+
+
+系 Linux 常用命令，包括文件的目录管理、文件管理、检索、压缩等。
+手握 IntelliJ IDEA 等IDE 开发工具，熟悉多种插件的使用。
