--- a/计算机基础.md
+++ b/计算机基础.md
@@ -5,3 +5,11 @@
 
 熟悉操作系统，对进程，内存管理，I/O多路服用，CPU调度和死锁等操作系统的基础知识
 
+计算机网络:熟悉计算机网络常见协议,例如 HTTP、HTTPS、TCP、UDP、IP、DNS等网络协议;熟悉 TCP
+三次握手、四次挥手以及 TLS 的四次握手的过程 。
+
+
+操作系统:了解操作系统基本原理及算法,例如 !0多路复用的 select、pol、epol 函数以及零拷贝的
+mmap、sendfle 函数原理;进程调度算法、页面置换算法、磁盘调度算法等
+
+
