--- a/并发编程.md
+++ b/并发编程.md
@@ -7,3 +7,14 @@
 
 并发编程:深入理解Java并发编程,涵盖锁机制、线程池、CAS、ThreadLocal等方面的知识,在多个项目中实
 际应用了多线程任务处理和性能优化。
+
+并发编程:熟练使用Java中的并发容器，
+Copy0nWriteArrayList等，对线程池、synchronized关键字、
+4ConcurrentHashMap、
+yolati1e头键字
+ReentrantLock、
+ThreadLocal等有深入的理解
+
+
+熟悉并发编程，熟悉Java中各种锁机制、CAS、AOS、线程池、Threadlocal、以及JUC 并发工具类的使
+用和原理，如:重入锁、读写锁、阻塞队列以及原子并发类等，
