--- a/计算机基础.md
+++ b/计算机基础.md
@@ -13,3 +13,11 @@
 mmap、sendfle 函数原理;进程调度算法、页面置换算法、磁盘调度算法等
 
 
+计算机网络:熟悉七层网络结构、
+TCP三次握手四次挥手过程，TCP和UDP
+Cookle本isesslon.
+Get和Post等。
+
+
+Dubbo:熟悉使用 Dubbo 进行内部服务间的调用,熟悉 Dubbo 的整体架构,并仿照实现了
+-个简单易用的 RPC 框架。
