--- a/计算机基础.md
+++ b/计算机基础.md
@@ -21,3 +21,27 @@ Get和Post等。
 
 Dubbo:熟悉使用 Dubbo 进行内部服务间的调用,熟悉 Dubbo 的整体架构,并仿照实现了
 -个简单易用的 RPC 框架。
+
+算法与数据结构: 熟悉数据结构及常见算法，如数组，链表，哈希表，排序算法、贪心、动态规划等。
+
+计算机网络:
+熟悉计算机常见协议、
+例女 HTTP
+CP
+UIDP
+DNS 等网络协议，
+熟悉 TCP 三次握手，
+四次挥手以及
+的四次握手的过程
+
+操作系统:
+了解操作系统中的进程调度算法、页面置换算法、磁盘调度算法等，
+生与解决
+以及死锁的产么
+
+
+
+操作系统:了解操作系统基本原理及算法，例如多路复用的 select、poll、epoll 函数及进程调度算法、页面置换算法等
+
+
+网络 :了解计算机网络基础知识，熟悉 OS| 七层模型、HTTP 协议，如 TCP 的三握四挥、网址解析过程。
