--- a/工具.md
+++ b/工具.md
@@ -6,3 +6,11 @@ Git、Maven 等开发工具;熟悉 Linux 下的常用操作命令，能够独立
 
 系 Linux 常用命令，包括文件的目录管理、文件管理、检索、压缩等。
 手握 IntelliJ IDEA 等IDE 开发工具，熟悉多种插件的使用。
+
+
+了解Nginx，可用Nginx实现反向代理、负载均衡、动静分离、前端网站的部署等;
+掌握Linux与Docker的常用命令,如拉取镜一像进行快速启动个服务、编写Dockerfile、项目部署
+熟练使用IDEA、Maven、Git、Postman、SQLyog、JMeter、Swagger等工具进行开发;
+
+
+他:Postman、Swagger2,Jmeter等:
